# misis2026s-25-04-labudeva-v-i

./: CMakeLists.txt  status.md
prj.labs/Bitsetd/: BitsetD.cpp  Bitsetd.hpp  CmakeLists.txt
prj.labs/DioStrB/: DioStrB.cpp  DioStrB.hpp
prj.labs/DioStrT/: DioStrT.cpp  DioStrT.hpp
prj.labs/arrayT/: arrayT.cpp  arrayT.hpp
prj.labs/stacka/: stacka.hpp
prj.labs/stackl/: stackl.cpp  stackl.hpp
prj.test/: BitsetD_test.cpp  CMakeLists.txt  arrayt_test.cpp  dio_test.cpp  stacka_test.cpp  stackl_test.cpp
